--- a/A2/Makefile
+++ b/A2/Makefile
@@ -4,4 +4,4 @@ omp:
 	g++ -O3 -fopenmp matrix_ops_omp.cpp -o omp_out && ./omp_out
 
 mpi:
-	@echo "Not Implemented"
+	mpic++ matrix_ops_mpi.cpp -O3 && mpirun --use-hwthread-cpus -np 8 a.out
