--- a/A2/Makefile
+++ b/A2/Makefile
@@ -1,7 +1,7 @@
 all: omp-exp mpi-exp mpi-exp2 clean
 omp-exp: omp-100 omp-400 omp-800 omp-1000 omp-2000 omp-4000 omp-6000 omp-8000 omp-10000
-mpi-exp: mpi-100 mpi-400 omp-800 mpi-1000 mpi-2000 mpi-4000 mpi-6000 mpi-8000 mpi-10000
-mpi-exp2: mpi-1 mpi-2 mpi-3 mpi-4 mpi-5 mpi-6 mpi-7 mpi-8
+mpi-exp: mpi-100 mpi-400 mpi-800 mpi-1000 mpi-2000 mpi-4000 mpi-6000 mpi-8000 mpi-10000
+mpi-exp2: mpi-2 mpi-3 mpi-4 mpi-5 mpi-6 mpi-7 mpi-8
 
 test:
 	@g++ -O3 -fopenmp matrix_ops_omp.cpp -D N=6 -D TEST=1 -o omp_out && ./omp_out
@@ -79,10 +79,6 @@ mpi-8000:
 mpi-10000:
 	@echo "MPI Running for N = 10000";
 	@mpic++ matrix_ops_mpi.cpp -O3 -D N=10000 -o mpi_out && mpirun --use-hwthread-cpus -np 8 mpi_out
-
-mpi-1:
-	@echo "Running for 1 Process";
-	@mpic++ matrix_ops_mpi.cpp -O3 -D N=2500 -o mpi_out && mpirun --use-hwthread-cpus -np 1 mpi_out
 
 mpi-2:
 	@echo "Running for 2 Processes";
